Fix big gap in title of navbar (#2015)

--- a/app/assets/stylesheets/themes/scinote.scss
+++ b/app/assets/stylesheets/themes/scinote.scss
@@ -322,6 +322,7 @@ a[data-toggle="tooltip"] {
   .nav-name {
     height: 54px;
     line-height: 44px;
+    margin: 0;
     overflow: hidden;
     padding: 5px 0;
     text-overflow: ellipsis;
